api 와 view controller분리 jsp 템플릿 엔진 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
       path: /h2-console
   datasource:
     url: jdbc:h2:file:./db
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp/
+      suffix: .jsp
 
 
 
