--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <version>${spring.boot.version}</version>
             <scope>provided</scope>
         </dependency>-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.7</version>
+        </dependency>
     </dependencies>
 
     <build>
