--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
-
-
+  http:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+logging:
+  path: ./logs/
 
